# noisemodel

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  secrets.json  setup.cfg  setup.py
Dev/: example3-Copy1.ipynb
dev/: Untitled.ipynb  Untitled1.ipynb  generate_noise_map.ipynb  test_io.py
noisemodel/: NoiseMap.py  Noise_Wind_Turbines.csv  WindTurbineModel.py  __init__.py  noise.py  noisemap_geo_coord.py  setup.py  trained_model.joblib  windfarmanalysis.py  windnoiseanalysis.py  windspeed.py  windturbinemodel.py
test/: Untitled.ipynb
tests/: Case_Study_1.ipynb  Untitled.ipynb  Windraeder.csv  case_study_CH.ipynb  test_noiseanalysis.py  test_noisemap.py  test_windspeed.py  test_windturbines.py
tests/fixtures/: wind_speed_dummy_data.nc
windwhisper/: __init__.py  noiseanalysis.py  noisemap.py  windfarmanalysis.py  windspeed.py  windturbines.py
windwhisper/data/training_data/: noise_wind_turbines.csv
