[metadata]
name = WindWhisper
version = 0.0.1
description = Noise modelling of wind turbines
long_description = file: README
long_description_content_type = text/markdown
author="Maxime Balandret, Romain Sacchi",
author_email="maxime.balandret@psi.ch, romain.sacchi@psi.ch",

license = BSD-3-Clause
license_files = LICENSE
classifiers =
    "Intended Audience :: End Users/Desktop"
    "Intended Audience :: Developers"
    "Intended Audience :: Science/Research"
    "License :: OSI Approved :: BSD License"
    "Operating System :: MacOS :: MacOS X"
    "Operating System :: Microsoft :: Windows"
    "Operating System :: POSIX"
    "Programming Language :: Python"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3.9"
    "Topic :: Scientific/Engineering :: Information Analysis"
    "Topic :: Scientific/Engineering :: Mathematics"
    "Topic :: Scientific/Engineering :: Visualization"
url=https://github.com/MaximeBalandret/noisemodel

[options]
packages = find_namespace:
python_requires = >=3.10
include_package_data = True
install_requires =
    ; tqdm
    haversine
    folium
    ; shapely
    ; windrose
    xarray
    scikit-learn
    numpy
    osmnx
    skops==0.9.0
    matplotlib
    netCDF4
    ; seaborn
    ipywidgets

[options.package_data]
windwhisper.data.training_data =
    *.csv
